# holbertonschool-machine_learning

./: .gitignore  Notes.ipynb  README.md  pyproject.toml
0x00-lockboxes/: 0-lockboxes.py  README.md
math/0x00-linear_algebra/: 1-trim_me_down.py  10-ill_use_my_scale.py  100-slice_like_a_ninja.py  101-the_whole_barn.py  102-squashed_like_sardines.py  11-the_western_exchange.py  12-bracin_the_elements.py  13-cats_got_your_tongue.py  14-saddle_up.py  2-size_me_please.py  3-flip_me_over.py  4-line_up.py  5-across_the_planes.py  6-howdy_partner.py  7-gettin_cozy.py  8-ridin_bareback.py  9-let_the_butcher_slice_it.py  README.md
math/0x01-plotting/: 0-line.py  1-scatter.py  2-change_scale.py  3-two.py  4-frequency.py  5-all_in_one.py  README.md
math/0x02-calculus/: 10-matisse.py  17-integrate.py  9-sum_total.py  README.md
math/0x03-probability/: README.md  binomial.py  exponential.py  normal.py  poisson.py
supervised_learning/0x01-classification/: 0-neuron.py  1-neuron.py  2-neuron.py  3-neuron.py  4-neuron.py  5-neuron.py  6-neuron.py  README.md
supervised_learning/0x02-tensorflow/: 0-create_placeholders.py  1-create_layer.py  2-forward_prop.py  3-calculate_accuracy.py  README.md
supervised_learning/0x03-optimization/: 0-norm_constants.py  1-normalize.py  10-Adam.py  11-learning_rate_decay.py  12-learning_rate_decay.py  13-batch_norm.py  14-batch_norm.py  15-model.py  2-shuffle_data.py  3-mini_batch.py  4-moving_average.py  5-momentum.py  6-momentum.py  7-RMSProp.py  8-RMSProp.py  9-Adam.py  README.md
supervised_learning/0x04-error_analysis/: 1-sensitivity.py  (+6 more)
(+52 files in other folders)
